test/classes/delete-free/lifetimes/record-borrows-and-owns.good
record-borrows-and-owns.chpl:36: In function 'badMyFun':
record-borrows-and-owns.chpl:40: error: Scoped variable lhs would outlive the value it is set to
record-borrows-and-owns.chpl:37: note: consider scope of tmp
record-borrows-and-owns.chpl:43: In function 'badF1':
record-borrows-and-owns.chpl:45: error: Scoped variable cannot be returned
record-borrows-and-owns.chpl:44: note: consider scope of r
record-borrows-and-owns.chpl:49: In function 'badF2':
record-borrows-and-owns.chpl:51: error: Scoped variable cannot be returned
record-borrows-and-owns.chpl:50: note: consider scope of r
record-borrows-and-owns.chpl:55: In function 'badF3':
record-borrows-and-owns.chpl:61: error: Scoped variable r2 cannot be returned
record-borrows-and-owns.chpl:56: note: consider scope of own
record-borrows-and-owns.chpl:65: In function 'badF4':
record-borrows-and-owns.chpl:67: error: Scoped variable cannot be returned
record-borrows-and-owns.chpl:66: note: consider scope of a
record-borrows-and-owns.chpl:71: In function 'badF5':
record-borrows-and-owns.chpl:73: error: Scoped variable cannot be returned
record-borrows-and-owns.chpl:72: note: consider scope of a
record-borrows-and-owns.chpl:76: In function 'badF6':
record-borrows-and-owns.chpl:78: error: Scoped variable cannot be returned
record-borrows-and-owns.chpl:77: note: consider scope of a
record-borrows-and-owns.chpl:82: In function 'badF7':
record-borrows-and-owns.chpl:87: error: Scoped variable cannot be returned
record-borrows-and-owns.chpl:83: note: consider scope of a
record-borrows-and-owns.chpl:90: In function 'badF8':
record-borrows-and-owns.chpl:95: error: Scoped variable cannot be returned
record-borrows-and-owns.chpl:91: note: consider scope of a
